--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,9 @@
   "manifest_version": 2,
   "name": "YT-Shell",
   "description": "YT-Shell is a browser extension which lets you stay focused while using YouTube. Block recommendations, upcummies and more!",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "background": {
+    "persistent": true,
     "scripts": [
       "background.js"
     ]
@@ -11,6 +12,7 @@
   "permissions": [
     "tabs",
     "contextMenus",
+    "storage",
     "*://www.youtube.com/*"
   ],
   "content_scripts": [
@@ -25,6 +27,6 @@
   ],
   "browser_action": {
     "default_popup": "settings_panel.html",
-    "default_title": "Settings"
+    "default_title": "YT-Shell Settings"
   }
 }
