--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,34 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "YT-Shell",
   "description": "YT-Shell is a browser extension which lets you stay focused while using YouTube. Block recommendations, upcummies and more!",
-  "version": "0.2.0",
-  "background": {
-    "persistent": true,
-    "scripts": [
-      "background.js"
-    ]
-  },
+  "version": "0.3.0",
   "permissions": [
     "tabs",
-    "contextMenus",
     "storage",
-    "*://www.youtube.com/*"
+    "contextMenus"
   ],
   "content_scripts": [
     {
       "matches": [
         "*://www.youtube.com/*"
       ],
+      "run_at": "document_start",
       "css": [
-        "hide_page.css"
+        "inject.css"
+      ]
+    },
+    {
+      "matches": [
+        "*://www.youtube.com/*"
+      ],
+      "run_at": "document_end",
+      "js": [
+        "inject.js"
       ]
     }
   ],
-  "browser_action": {
+  "action": {
     "default_popup": "settings_panel.html",
     "default_title": "YT-Shell Settings"
   }
